appId: com.vblast.flipaclip
tags:
  - welcomeFlow
  - qa
---
- launchApp:
    clearState: true
    permissions:
      notifications: allow
- tapOn: Get Started
- swipe:
    start: 20%, 50%
    end: 80%, 50%
    duration: 70
- tapOn: Continue
- tapOn: Accept All Cookies
- tapOn:
    id: closeAction
- tapOn: I want to learn how to animate
- tapOn: Continue
- tapOn: Close
- assertVisible:
    id: navLogo
- takeScreenshot: "../baseline/home"
- assertVisible: "HOME"
- assertVisible: "DISCOVER"
- assertVisible: "WATCH"
- assertVisible: "SEARCH"
