appId: com.vblast.flipaclip
tags:
  - welcomeFlow
  - prod
---
- launchApp:
    clearState: true
    permissions:
      notifications: allow
- tapOn: Get Started
- swipe:
    start: 20%, 50%
    end: 80%, 80%
    duration: 70
- tapOn: Continue
- tapOn:
    id: closeAction
- tapOn: I want to learn how to animate
- tapOn: Continue
- tapOn: "Play"
- tapOn:
    point: "50%,50%"
- tapOn:
    point: 50%,50%
- tapOn:
    id: "closeButton"