appId: com.vblast.flipaclip
tags:
  - login
  - welcome flow
env:
  EMAIL: "franco+371@visualblasters.com"
  PASSWORD: "123456"
---
- launchApp:
    clearState: true
- tapOn: Have an account? Sign In
- tapOn: Continue with email
- tapOn: Email address
- inputText: ${EMAIL}
- tapOn: Password
- inputText: ${PASSWORD}
- tapOn:
    text: Back
- tapOn: Sign in
- assertVisible: What brings you to FlipaClip?

