appId: com.vblast.flipaclip
permission:

---
- launchApp:
    permissions: 
        notifications: allow
    clearState: true
##- extendedWaitUntil:
    ##visible: "Get Started"
    ##timeout: 5000
- extendedWaitUntil:
    visible: "Get Started"
    timeout: 10000
- tapOn: "Get Started"
- extendedWaitUntil:
    visible: "What's your age?"
    timeout: 10000
- swipe:
    start: "20%,50%"
    end: "38%,33%"
    duration: 1500
- tapOn: "Continue"
- extendedWaitUntil:
    visible: "Personalized Ads"
    timeout: 10000
- tapOn: "Continue"
- tapOn: "Allow"
- extendedWaitUntil:
    visible: "Yearly"
    timeout: 10000
- tapOn:
    point: "15, 60"
- extendedWaitUntil:
    visible: "What brings you to FlipaClip?"
    timeout: 10000
- tapOn: "I want to learn how to animate"
- tapOn: "Continue"
- extendedWaitUntil:
    visible: "Make your first animation!"
    timeout: 10000
- tapOn:
    point: "18, 75"
- assertVisible:
    id: "app_logo"
- assertVisible: "HOME"
- assertVisible: "DISCOVER"
- assertVisible: "WATCH"
- assertVisible: "SEARCH"
- assertVisible: "Projects"
- assertVisible: "Movies"