appId: com.vblast.flipaclip
tags:
  - settings
---
- launchApp: com.vblast.flipaclip
- tapOn: Settingsrr
- tapOn: App Settings
- tapOn:
    id: switch_button
