appId: com.vblast.flipaclip
tags:
  - ads
env:
  PROJECT: "Load Ad"
---
- launchApp: com.vblast.flipaclip
- tapOn: 
    id: navCreateProjectButton
- tapOn: Classic
- tapOn: 
    id: projectName
- inputText: ${PROJECT}
- hideKeyboard
- tapOn: 
    id: action_confirm
- tapOn:
    id: audioButton
- tapOn: Add Audio
- tapOn: Add Audio
- waitForAnimationToEnd:
    timeout: 15000
- tapOn: WATCH AD
- assertNotVisible: This feature is locked!
