appId: com.vblast.flipaclip
tags:
  - api
env:
  PROJECT: Audio Library
---
- launchApp: com.vblast.flipaclip
- tapOn:
    id: navCreateProjectButton
- tapOn: 
    id: projectName
- inputText: ${PROJECT}
- hideKeyboard
- tapOn: 
    id: action_confirm
- tapOn:
    id: audioButton
- tapOn: 
    id: actionMidToolbarAddAudio
- tapOn: Audio Library
- assertVisible: Fight - Sound FX
- assertVisible: Fun - Sound FX
- tapOn: "Close"
