appId: com.vblast.flipaclip
tags:
  - discover
  - watch
  - backend
---
- launchApp: com.vblast.flipaclip
- tapOn:
    id: llDiscover
- assertVisible: 
    id: iv_image #1
- repeat:
    times: 3
    commands:
      - swipe:
          direction: LEFT
- tapOn: Getting Started
- assertVisible:
    id: image #1

