appId: com.vblast.flipaclip
tags:
  - discover
  - watch
  - backend
---
- launchApp: com.vblast.flipaclip
- tapOn: WATCH
- assertVisible: Play
- assertVisible: "Want your story to be"
- assertVisible: "watched by"
- tapOn: "millions?"
- assertVisible: "Submit now"