appId: com.vblast.flipaclip
tags:
  - login
  - settings
env:
  MAIL: "franco+371@visualblasters.com"
  PASS: "123456"
---
- launchApp: com.vblast.flipaclip
- tapOn: Settings
- tapOn: Accounts
- tapOn: FlipaClip
- tapOn: SIGN IN
- tapOn: Sign in with email
- tapOn: Email address
- inputText: ${MAIL}
- tapOn: Password
- inputText: ${PASS}
- hideKeyboard
- tapOn: Sign in
- assertVisible: Account information
