appId: com.vblast.flipaclip
tags:
  - account
---
- launchApp: com.vblast.flipaclip
- tapOn: Settings
- tapOn: Accounts
- tapOn: YouTube
- runFlow: 
    when: 
        visible: "qatest.visualblasters@gmail.com"
    commands: 
        - tapOn: "qatest.visualblasters@gmail.com"
- tapOn: Back
- tapOn: Back



