appId: com.vblast.flipaclip
tags:
  - account
  - settings
---
- launchApp: com.vblast.flipaclip
- tapOn: Settings
- tapOn: Accounts
- tapOn: Flipaclip
- tapOn: Sign Out
- assertVisible: Create account