appId: com.vblast.flipaclip
tags:
  - project
  - makeMovie
env:
  PROJECT: "My Project 1"
  MOVIE: "Movie"
---
- launchApp: com.vblast.flipaclip
- setPermissions:
    permissions:
      storage: allo
- tapOn: Add Project
- tapOn: Name your animation
- inputText: ${PROJECT}
- hideKeyboard
- tapOn:
    id: "action_confirm"
- repeat:
    times: 11
    commands:
      - tapOn: Add Frame
- tapOn:
    id: "actionMakeMovie"
- assertVisible: 12 FRAMES
- assertVisible: 1 SECOND
- tapOn:
    id: movieName
- eraseText
- inputText: ${MOVIE}
- hideKeyboard
- tapOn:
    id: "actionBuild"
- tapOn: "YouTube"
- tapOn:
    id: "actionShare"
- assertVisible: "Upload complete!"
- assertVisible: "Make sure to follow FlipaClip"
