appId: com.vblast.flipaclip
tags:
  - project
  - makeMovie
env:
  PROJECT: "My Project 2"
  MOVIE: "Movie"
---
- launchApp: com.vblast.flipaclip
- setPermissions:
    permissions:
      storage: allow
- tapOn: Add Project
- tapOn: Name your animation
- inputText: ${PROJECT}
- hideKeyboard
- tapOn: CREATE PROJECT
- repeat:
    times: 11
    commands:
      - tapOn: Add Frame
- tapOn: Share
- assertVisible: 12 FRAMES
- assertVisible: 1 SECOND
- tapOn:
    id: movieName
- eraseText
- inputText: ${MOVIE}
- hideKeyboard
- tapOn: MAKE MOVIE
- assertVisible: Youtube