appId: com.vblast.flipaclip
tags:
  - project
  - makeMovie
env:
  PROJECT: "My project 3"
  MOVIE: "Movie 3"
---
- launchApp: com.vblast.flipaclip
- setPermissions:
    permissions:
      storage: allow
- tapOn: Add Project
- tapOn: Beta Version (NEW)
- tapOn: Name your animation
- inputText: ${PROJECT}
- hideKeyboard
- tapOn: CREATE PROJECT
- swipe:
    start: "50%, 50%"
    end: "70%,70%"
    duration: 1000
- tapOn: Share
- tapOn:
    id: movieName
- eraseText
- inputText: ${MOVIE}
- hideKeyboard
- tapOn: MAKE MOVIE
- assertVisible: Youtube
