appId: com.vblast.flipaclip
tags:
  - movies,projects
env:
  PROJECT: "My Project 1"
---
- launchApp: com.vblast.flipaclip
- setPermissions:
    permissions:
      storage: allow
- tapOn: Add Project
##- tapOn: Classic
- tapOn: Name your animation
- inputText: ${PROJECT}
- hideKeyboard
- tapOn: CREATE PROJECT
- repeat:
    times: 11
    commands:
      - tapOn: Add Frame
- tapOn: More
- tapOn: MAKE MOVIE
- tapOn: MAKE MOVIE
- runFlow:
    when:
      visible: "We need your permission to delete the existing movie. Please allow to continue."
    commands:
      - tapOn: ALLOW
- runFlow:
    when:
      visible: "Allow FlipaClip to delete this video?"
    commands:
      - tapOn: Allow
- tapOn: YouTube
- tapOn: SHARE
- assertVisible: Upload complete!
