appId: com.vblast.flipaclip
tags:
  - makeMovie
env:
  PROJECT: "My project 1"
  MOVIE: "Movie 1"
---
- launchApp: com.vblast.flipaclip
- tapOn: Add Project
- tapOn: Classic
- tapOn: Name your animation
- inputText: ${PROJECT}
- hideKeyboard
- tapOn: CREATE PROJECT
- repeat:
    times: 11
    commands:
      - tapOn: Add Frame
- tapOn: Make Movie
- assertVisible: 12 FRAMES
- assertVisible: 1 SECOND
- tapOn:
    id: movieName
- eraseText
- inputText: ${MOVIE}
- hideKeyboard
- tapOn: MAKE MOVIE
- tapOn: YouTube
- tapOn: SHARE
- assertVisible: Upload complete!
